--- a/views/index.html
+++ b/views/index.html
@@ -149,7 +149,7 @@
     <div id="footer">
       <hr />
       <p class="left">@<a href="http://lyxint.com/">lyxint</a></p>
-      <p class="right">Copyright &copy; 1996-2011 shurl.im, All Rights Reserved. </p>
+      <p class="right">Copyright &copy; 2011 shurl.im, All Rights Reserved. </p>
       <p>&nbsp;</p>
     </div>
   </div>
