--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
             margin-bottom:1px;
         }
         #container {
-            width: 80%;
+            width: 520px;
             margin-right: auto;
             margin-left: auto;
             text-align: left;
