--- a/views/index.html
+++ b/views/index.html
@@ -142,7 +142,7 @@
         Recent URLs:
         <ul>
             % for uid, url in urls:
-            <li><a href="/{{uid}}">{{url}}</li>
+            <li><a href="/{{uid}}">{{url}}</a></li>
             % end
         </ul>
     </div>
