--- a/views/index.html
+++ b/views/index.html
@@ -139,7 +139,7 @@
       <hr />
     </div>
     <div id="main">
-        Recent URLs:
+        {{url_count}} URLs saved, Recent visited URLs:
         <ul>
             % for uid, url in urls:
             <li><a href="/{{uid}}">{{url}}</a></li>
