--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
             margin-bottom:1px;
         }
         #container {
-            width: 520px;
+            width: 880px;
             margin-right: auto;
             margin-left: auto;
             text-align: left;
@@ -133,7 +133,7 @@
 <body>
   <div id="container">
     <div id="header">
-      <h1>shurl.im - short url service</h1>
+      <h1>shURL.im - Yet Another URL Shortening Service</h1>
         <br />
       <h2>usage: curl -i http://shurl.im/ -F "url=your url"</h2>
       <hr />
